# mine

project147/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  project147.glade  project147.gladep.bak  search.txt  utilisateur.txt
project147/autom4te.cache/: output.0  requests  traces.0  traces.1
project147/po/: Makefile  Makefile.in
project147/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  project147  utilisateur.c  utilisateur.h
project147/src/.deps/: utilisateur.Po
projet101/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet101.glade.bak  projet101.gladep.bak  search.txt  utilisateur.txt
projet101/autom4te.cache/: output.0  requests  traces.0  traces.1
projet101/po/: Makefile  Makefile.in
projet101/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  main.c  utilisateur.c  utilisateur.h
version4000/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  version4000.glade.bak  version4000.gladep.bak
version4000/autom4te.cache/: output.1  requests  traces.0  traces.1
version4000/po/: Makefile  (+1 more)
version4000/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  utilisateur.c  utilisateur.h
yoser/: .goutputstream-SQ9AV1  mainuser.c  makefile  prog  tab_gu.c  tache.c  tache.h  tache.h.gch  utilisateur.c  utilisateur.h  utilisateur.h.gch  utilisateur.txt
(+8 files in other folders)
